# ooaip_bot

./: .gitignore  README.md  pyproject.toml  random.py
alembic/: env.py
alembic/versions/: c2850628d8b2_initial_database.py
src/: config.py  database.py  main.py  models.py
src/checker/: router.py  utils.py
src/commits/: models.py  repository.py  router.py  schemas.py
src/github/: models.py  routers.py  service.py
src/github/commits/: repository.py  routers.py
src/github/metrics/: repository.py  routers.py
src/github/users/: repository.py  router.py
src/metrics/: models.py  repository.py  router.py  schemas.py
src/users/: models.py  repository.py  router.py  schemas.py
