[tool.poetry]
name = "ooaip-bot"
version = "0.1.0"
description = ""
authors = ["tterwq <tterleeva28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.2"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
fastapi = "^0.111.0"
requests = "^2.32.3"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
